<resources>
    <string name="app_name">Chess</string>
    <string name="title_activity_login">Login</string>

    <string name="button_login">Enter</string>
    <string name="lbl_pwd2">Repeat password</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_email">Email</string>
    <string name="edit_text_hint_email">Email</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="lbl_chnage">Click to change</string>
    <string name="msg_empty_email">Neither name, nor email nor password may be empty</string>
    <string name="msg_pwd_mismatch">Passwords do not match</string>
    <string name="btn_save_save">Save</string>
    <string name="btn_save_create">Save and start the game</string>
    <string name="lbl_name">Name</string>
    <string name="button_facebook">Facebook</string>
    <string name="button_google">Google</string>
    <string name="google_sign">or use your google account</string>
    <string name="button_signup">Sign up</string>
    <string name="label_login">Enter login and password</string>
    <string name="text_no_account">Do not have an account yet?</string>
    <string name="button_join">Join</string>
    <string name="button_invite">Invite a friend</string>
    <string name="button_stats">Stats</string>
    <string name="button_logout">Log out</string>
    <string name="txt_player">Player</string>
    <string name="lbl_invitecode">To invite a second player, share with them the code</string>
    <string name="intro_start">
        <br>To start a new game, choose color and press [Generate new code]. Share the code with the second player\n\n</br>
        <br>If you already have a code - just enter it\n\n</br>
    </string>
    <string name="btnGenerateCode">Generate new code</string>
    <string name="lblCode">Code:</string>
    <string name="btnNext">Next…</string>
    <string name="txtInfo_do">Your turn…</string>
    <string name="txtInfo_wait">Second player\'s turn…</string>
    <string name="txt_play_white">Your color is WHITE</string>
    <string name="txt_play_black">Your color is BLACK</string>
    <string name="btnLogout">Log out…</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lbl_wait_friend">Waiting for the second player…</string>
    <string name="btn_surrender">Surrender</string>
    <string name="btn_draw">Offer a draw</string>
    <string name="btn_accept">Draw? Yes!</string>
    <string name="btn_deny">Draw? No!</string>
    <string name="switch_white">Color: white</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_stat">Stats</string>
    <string name="menu_exit">Exit</string>
    <string name="fig_color_w">white</string>
    <string name="fig_color_b">black</string>
    <string name="no_empty_name" >Neither name nor password nor email may be empty</string>
    <string name="password_mismatch">Passwords are mismatched</string>
    <string name="txt_request">Request</string>
    <string name="txt_exist">Quit</string>
    <string name="propose_draw">Second player offers a draw. If you accept, the game will be over</string>
    <string name="request_draw">You offered a draw. Wait for the response</string>
    <string name="msgbox_yes">Yes</string>
    <string name="msgbox_notagree">Refused</string>
    <string name="txt_wrong_step">Wrong step</string>
    <string name="stats_winner">Win</string>
    <string name="stats_loser">Lose</string>
    <string name="stats_draw">Draw</string>
    <string name="stats_incompleted">Incomplete</string>

    <string name="you_win">Second player surrenders! You win! Game over</string>
    <string name="you_lose">You surrender! Game over</string>
    <string name="err_google_signin">Google Sign-in Error</string>
    <string name="err_no_login">You are not logged in</string>
    <string name="err_empty_email">e-mail address cannot be empty</string>
    <string name="err_google_enter">Error while entering Google account</string>
    <string name="title_activity_game">Playing chess</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_create_account">Create account</string>
    <string name="title_activity_editaccount">Edit account</string>
    <string name="title_activity_avatar_list">Choose an avatar</string>
</resources>