<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    tools:context=".StartActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/menu_profile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_stat"
        android:orderInCategory="100"
        android:title="@string/menu_stat"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/menu_exit"
        app:showAsAction="never"/>
</menu>
