<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GameForTwo.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.GameForTwo.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center"
        tools:context=".LoginActivity"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="237dp"
            android:layout_height="29dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="92dp"
            android:text="@string/label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/edit_text_hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="69dp"
            android:ems="10"
            android:hint="@string/edit_text_hint_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateLogin"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/text_no_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="60dp"
            android:onClick="onClickLogin"
            android:text="@string/button_login"
            app:layout_constraintBottom_toTopOf="@+id/orSignInWithTextView"
            app:layout_constraintEnd_toStartOf="@+id/btnCreateLogin" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="23dp"
            android:clickable="true"
            android:text="@string/button_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orSignInWithTextView" />

        <TextView
            android:id="@+id/orSignInWithTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/google_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateLogin" />

        <Button
            android:id="@+id/btnCreateLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="144dp"
            android:onClick="onClickCreateLogin"
            android:text="@string/button_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>