<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:saveEnabled="false"
    tools:context=".GameControlFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_wait_friend"
                android:textColor="#FF5722" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_surrender"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:onClick="onClickConcede"
                android:text="@string/btn_surrender" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickDraw"
                android:text="@string/btn_draw" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableLayout>

</LinearLayout>